--- a/assets/css/templatemo-softy-pinko.css
+++ b/assets/css/templatemo-softy-pinko.css
@@ -1459,7 +1459,7 @@ footer
 --------------------------------------------- 
 */
 footer {
-  background-image: linear-gradient(127deg, #a759d1 0%, #8261ee 91%);
+  background-image: linear-gradient(127deg, #000000 0%, #000000 91%);
   padding-top: 30px;
 }
 
@@ -1475,7 +1475,7 @@ footer .social li {
 }
 
 footer .social li a {
-  color: #9d5bd9;
+  color: #000000;
    text-align: center;
   background-color: #fff;
   width: 36px;
